style.css
*,
*::after,
*::before {
    box-sizing: border-box;
}
@font-face {
    font-display: swap;
    font-family: "Montserrat";
    font-style: normal;
    font-weight: 400;
    src: url("../fonts/montserrat-v29-latin-regular.woff2") format("woff2");
}
body {
    padding: 0;
    margin: 0;
    width: 100%;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
        sans-serif;
}
h1,
h2,
h3 {
    margin: 0;
}
h3 {
    font-size: 24px;
    color: #333333;
}
h4 {
    font-size: 15px;
    line-height: 16px;
    margin-bottom: 0.25rem;
}
button {
    border: none;
    border-radius: 60px;
    padding: 20px 64px;
    text-transform: uppercase;
    background-color: #4f62f6;
    color: white;
    cursor: pointer;
}
button:hover {
    background-color: #7181fc;
}
button:focus {
    background-color: #354bf4;
}
button:disabled {
    cursor: auto;
    color: #828282;
    background-color: #e0e0e0;
}
nav {
    z-index: 2;
    padding: 0 60px 0 8.31%;
    width: 100%;
    display: flex;
    position: fixed;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    height: 80px;
}
nav h2 {
    color: #333333;
    font-size: 1rem;
    font-weight: 700;
}
nav button {
    padding: 13px 24px;
}
nav ul {
    display: flex;
    gap: 2rem;
    margin: 0;
    margin-left: 4rem;
    list-style-type: none;
    padding: 0;
}
.burger {
    padding: 0.2rem;
    display: none;
    height: 24px;
}

.burger > * {
    border-top: 3px solid black;
    width: 24px;
}
li {
    font-size: 15px;
}
select {
    color: #333333;
    border: 1px solid black;
    border-radius: 60px;
    padding: 10px 16px;
}
.flex {
    display: flex;
    align-items: center;
    justify-content: center;
}
.button-nav-container {
    display: flex;
    gap: 1.5rem;
}
.header-main {
    padding: 0 8.31% 0 8.31%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    position: relative;
    top: 80px;
    min-height: 720px;
    color: #333333;
    background-color: hsl(249, 100%, 64%, 10%);
}
.header-main-content {
    padding: 2rem 0;
    width: 585px;
    display: flex;
    gap: 2.5rem;
    flex-direction: column;
    justify-content: space-around;
    align-items: start;
}
.header-main > img {
    max-width: 482px;
    max-height: 519px;
    padding-bottom: 2rem;
}
.header-main p {
    max-width: 483px;
}
h1 {
    font-weight: 500;
    line-height: 72px;
    color: #333333;
    font-size: 64px;
}
p {
    margin: 0;
    font-family: "Montserrat", sans-serif;
    font-size: 18px;
    line-height: 30px;
    color: #4f4f4f;
}
main {
    padding: 140px 8.31% 0 8.31%;
    padding-left: 8.31%;
}
main h1 {
    font-size: 56px;
    max-width: 483px;
    line-height: 66px;
}
.block-list {
    position: relative;
    padding: 4rem 0;
    display: flex;
    flex-direction: column;
    margin: 0;
}
.block-list > li {
    z-index: 1;
    background-color: white;
    position: relative;
    width: 50%;
    list-style-type: decimal-leading-zero;
    list-style-position: inside;
    border: 2px solid #6248ff;
    border-radius: 30px;
    padding: 2rem;
}
.line-right + li {
    left: 55%;
}
.block-list > li:nth-child(3) {
    top: -50px;
}
.block-list > li:nth-child(5) {
    top: calc(-50px * 2);
}
.block-list > li:nth-child(7) {
    top: calc(-50px * 3);
}
.block-list > li::marker {
    color: #6248ff;
    font-size: 15px;
}
.background-purple {
    background-color: hsl(249, 100%, 64%, 10%);
}
div[class^="line"] {
    position: absolute;
    border-radius: 1rem;
    border-top: 3px dotted #6c47ff;
    width: 60%;
    height: 100px;
}
.line-right {
    left: 20%;
}
.line-right:first-of-type {
    top: 15%;
    border-right: 2px dashed #6c47ff;
}
.line-right:last-of-type {
    top: 47%;
    border-right: 2px dashed #6c47ff;
}
.line-left {
    top: 30%;
    left: 25%;
    border-left: 2px dashed #6c47ff;
}
.circle-button {
    background-color: white;
    border-radius: 50%;
    aspect-ratio: 1/1;
    width: 48px;
    padding: 0;
    border: 1px solid #e0e0e0;
    color: black;
}
.circle-button:focus,
.circle-button:hover {
    background-color: white;
    border-color: #6248ff;
}
.circle-button-container {
    grid-row: 2/3;
    margin: 2rem 0 3rem 0;
}
.person-info {
    align-items: center;
    display: grid;
    gap: 0.25rem 1rem;
    padding: 1rem 0;
    grid-column: 3/-1;
    grid-template-columns: min-content 1fr;
}
.person-info img {
    grid-row: 1/3;
    border-radius: 50%;
    width: 73px;
}
.person-info h3 {
    font-size: 18px;
}
.person-info + h3 {
    grid-column: 3/4;
    grid-row: 2/3;
}
.review-section h1 {
    padding-bottom: 3rem;
}
.person-info p {
    font-size: 16px;
    line-height: 27px;
}
.review-section {
    padding-bottom: 128px;
    display: grid;
    grid-template-columns: 1fr min-content 1fr;
}
.qoutes {
    align-self: center;
    color: white;
    -webkit-text-stroke: 2px #6248ff;
    font-size: 56px;
    grid-row: 1/3;
    grid-column: 2/3;
}
.review-iterator {
    grid-column: 3/4;
    grid-row: 2/3;
    align-self: end;
    font-weight: 500;
    color: #6248ff;
}
.question-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 3rem 6%;
}
.block-question {
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    font-size: 24px;
    border: 2px solid #6248ff;
    border-radius: 20px;
    padding: 32px 40px;
}
.block-question p {
    display: none;
}
.block-question div {
    display: flex;
    align-items: center;
    transition: transform 0.5s;
}
.open {
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr min-content;
    grid-template-rows: min-content 1fr;
}
.open div {
    transform: rotate(135deg);
}
.open p {
    line-height: 27px;
    font-size: 16px;
    display: flex;
}
.faq-section {
    padding-bottom: 128px;
}
.contact-section {
    padding: 120px 8.31% 120px 8.31%;
    background-color: hsl(249, 100%, 64%, 10%);
    min-height: 739px;
    display: flex;
    flex-wrap: wrap;
    gap: 5rem 5%;
    justify-content: space-between;
    list-style-type: none;
}
.contact-section div {
    width: min(483px, 80%);
}
.contact-section ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}
.margin {
    padding: 2rem 0;
}
form {
    padding: 3rem 0;
    min-width: min(585px, 90%);
    border: 2px solid #6248ff;
    background-color: white;
    border-radius: 20px;
    display: flex;
    gap: 2rem;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
form input,
textarea {
    width: 75%;
}
input,
textarea {
    font-size: 16px;
    font-family: "Montserrat", sans-serif;
    color: #828282;
    padding: 0.5rem 1rem;
    border: none;
    outline: 1px solid #e0e0e0;
}

footer {
    display: grid;
    grid-template-columns: 1fr 3fr 3fr 1fr;
    gap: 3rem;
    padding: 2rem 8.31% 2rem 8.31%;
}
footer .legal-list {
    margin: 0;
    padding: 0;
    font-size: 16px;
    line-height: 27px;
    color: #828282;
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    grid-row: 2/3;
    grid-column: 1/-1;
}
footer .info-list {
    display: flex;
    justify-self: end;
    font-weight: 500;
    flex-direction: column;
    gap: 1rem;
    list-style-type: none;
    margin: 0;
    padding: 0;
    color: #333333;
    font-size: 15px;
}
footer h2 {
    color: #333333;

    font-size: 1rem;
    font-weight: 700;
}
footer h3 {
    margin-bottom: 1rem;
}
@media screen and (width<1100px) {
    nav ul,
    nav select,
    nav h2 {
        display: none;
    }
    nav {
        justify-content: end;
        gap: 3rem;
    }
    .burger {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    header img {
        width: min(418px, 100%);
    }
    footer {
        display: flex;
        flex-direction: column;
    }
    footer h2 {
        order: 0;
        align-self: center;
    }

    footer section:nth-of-type(1) {
        order: 3;
    }

    footer section:nth-of-type(2) {
        order: 4;
    }

    footer .legal-list {
        align-items: center;
        flex-direction: column;
        align-self: center;
        order: 5;
    }

    footer .info-list {
        flex-wrap: wrap;
        order: 2;
        flex-direction: row;
    }
}
@media screen and (width<800px) {
    .review-section {
        position: relative;
        justify-content: center;
        grid-template-columns: min-content 1fr min-content;
    }
    .review-section h1 {
        grid-column: 1/-1;
        grid-row: 1/2;
    }
    .circle-button-container {
        position: absolute;
    }
    .circle-button-container > :first-child {
        position: absolute;
        top: 50%;
    }
    .circle-button-container > :nth-child(2) {
        position: absolute;
        top: 50%;
        left: -100%;
    }
    .person-info {
        grid-column: 1/-1;
        grid-row: 2/3;
        display: flex;
        flex-direction: column;
    }
    .person-info + h3 {
        grid-column: 1/-1;
        grid-row: 3/4;
    }
    .review-iterator {
        grid-row: 4/5;
        justify-self: center;
        grid-column: 1/-1;
    }
}
@media screen and (width<500px) {
    nav button {
        display: none;
    }
    nav h2 {
        display: block;
    }
    nav {
        justify-content: space-between;
    }
    h1 {
        font-size: 40px;
        line-height: 44px;
    }
}

@media screen and (width<710px) {
    div[class^="line"] {
        display: none;
    }
    .block-list {
        justify-content: center;
        align-items: center;
        gap: 2rem;
    }
    .block-list li {
        width: 100%;
        position: static;
    }
}

@media screen and (width<1350px) {
    .contact-section {
        justify-content: center;
    }
    .contact-section > div,
    .contact-section > form {
        width: 90%;
    }
    .contact-section h1 {
        text-align: center;
    }
}
@media screen and (width<320px) {
    footer .info-list {
        flex-direction: column;
    }
}
@media screen and (width<1295px) {
    .header-main {
        justify-content: center;
        gap: 4rem;
        align-items: center;
    }
    .header-main-content {
        justify-content: center;
        align-items: center;
    }
}

